--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [tool.poetry]
 name = "climatereport_zillow"
-version = "0.1.58"
+version = "0.1.62"
 description = "Zillow listings do not contain a section on the environmental risk of the property. This package compiles a report on the climate risks of the property in the zillow listing."
 authors = ["Darci Kovacs"]
 license = "Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International Public License"
 readme = "README.md"
-documentation = ''
-homepage = ""
-repository = ""
+documentation = 'https://climatereportzillow.readthedocs.io/en/latest/index.html'
+homepage = "https://github.com/DarciKovacs/climatereport_zillow"
+repository = "https://github.com/DarciKovacs/climatereport_zillow"
 
 [tool.poetry.dependencies]
 python = "^3.9"
